--- a/src/views/erro404.phtml
+++ b/src/views/erro404.phtml
@@ -1,6 +1,6 @@
 <div class="container">
-<div class="alert alert-darger">
-    <strong>Ops.</strong>
-    Página não encontrada.
-</div>
+    <div class="alert alert-danger mt-3">
+        <strong>Ops.</strong>
+        Página não encontrada.
+    </div>
 </div>
