--- a/src/views/listar.phtml
+++ b/src/views/listar.phtml
@@ -5,7 +5,7 @@
 <table class="container table table-striped table-hover">
     <thead class="table-dark">
         <tr>
-            <th>Id</th>
+            <th>ID</th>
             <th>Nome</th>
             <th>Matricula</th>
             <th>Cidade</th>
@@ -13,16 +13,55 @@
         </tr>
     </thead>
     <tbody>
-        <?php 
-            foreach ($alunos as $linha) {
-                echo "<tr>
+    <?php
+        foreach ($dados as $linha) {
+            $id = $linha['id'];
+
+            echo "<tr>
                 <td>{$linha['id']}</td>
                 <td>{$linha['nome']}</td>
                 <td>{$linha['matricula']}</td>
                 <td>{$linha['cidade']}</td>
-                <td></td>
-                <tr>";
-            }
-            ?>
+                <td>
+                    <a href='/editar?id={$id}' class='btn btn-warning'>Editar</a>
+                    <a href='#'  onclick='excluirID({$id})' data-bs-toggle='modal' data-bs-target='#exampleModal' class='btn btn-danger'>Excluir</a>
+                </td>
+            </tr>";
+        }
+        ?>
     </tbody>
 </table>
+
+<!-- Modal -->
+<div class='modal fade' id='exampleModal' tabindex='-1' aria-labelledby='exampleModalLabel' aria-hidden='true'>
+    <div class='modal-dialog'>
+        <div class='modal-content'>
+            <div class='modal-header'>
+                <h1 class='modal-title fs-5' id='exampleModalLabel'>Excluir Aluno</h1>
+                <button type='button' class='btn-close' data-bs-dismiss='modal' aria-label='Close'></button>
+            </div>
+            <div class='modal-body'>
+                Desejar cancelar esse cpf?
+                <input type="hidden" id="newId">
+            </div>
+            <div class='modal-footer'>
+                <button type='button' class='btn btn-secondary' data-bs-dismiss='modal'>Semcerveja</button>
+                <button type='button' onclick='confirmar()' class='btn btn-danger'>Comcerveja</button> 
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+    function excluirID(id) {
+        document.getElementById("newId").value = id;
+    }
+    function confirmar() {
+        let id = document.getElementById("newId").value;
+        location.href = '/excluir?id=' + id;
+    }
+</script>
+
+<script src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js'
+    integrity='sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3'
+    crossorigin='anonymous'></script>
