--- a/src/views/menu.phtml
+++ b/src/views/menu.phtml
@@ -1,9 +1,5 @@
-<!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-
-<nav class="container">
+<nav class="container mt-3">
     <a class="btn btn-outline-dark" href="/">Inicio</a>
     <a class="btn btn-outline-dark" href="/listar">Listar</a>
     <a class="btn btn-outline-dark" href="/novo">Novo</a>
-    <a class="btn btn-outline-dark" href="/perfil">Perfil</a>
 </nav>
